
VERSION 0.6.1-cvs
=================

2004-12-23  Vincent Richard  <vincent@vincent-richard.net>

 * maildir: when connecting to the store, create root directory on the
   file system if it does not exist.

2004-12-22  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed missing files in distribution (src/platform/*).

 * Fixed empty 'COPYING' file.

 * Started version 0.6.1.


VERSION 0.6.0
=============

2004-12-22  Vincent Richard  <vincent@vincent-richard.net>

 * Finished 'maildir' implementation. This is EXPERIMENTAL!

 * Added a getCapabilities() function on 'vmime::messaging::store' to
   quickly check which features are available.

 * New functions in 'component': getParsedOffset(), getParsedLength()
   and getChildComponents().

2004-12-19  Vincent Richard  <vincent@vincent-richard.net>

 * Added chaining in exception handling. vmime::exception::other() returns
   the exception which is encapsulated in the current exception (if any).
   This allows to retrieve the exception "stack" (for example, this is
   used for 'maildir' implementation, where some functions return a
   'filesystem_exception' encapsulated in a 'messaging_exception').

 * Fixed bugs and memory leaks in POP3/IMAP/maildir implementations.

2004-12-17  Vincent Richard  <vincent@vincent-richard.net>

 * Made default platform handlers (currently, only "posix"). Source files
   are in src/platforms/[platform-name].

   To use a default platform handler, do the following:
      - #include <vmime/platforms/[platform-name]/handler.hpp>
      - call vmime::platformDependant::setHandler() with the appropriate class
      - link your program with both 'libvmime' and 'libvmime-[platform-name]'

   For example, to use the default platform handler for POSIX (GNU/Linux):

        #include <vmime/platforms/posix/handler.hpp>

        int main()
        {
            vmime::platformDependant::setHandler
                  <vmime::platforms::posix::posixHandler>();

            // ...
        }
