@@ -36,12 +36,12 @@ libvmime_sources = [
 	'charset.cpp', 'charset.hpp',
 	'component.cpp', 'component.hpp',
 	'constants.cpp', 'constants.hpp',
+	'contentDisposition.cpp', 'contentDisposition.hpp',
 	'contentDispositionField.cpp', 'contentDispositionField.hpp',
 	'contentHandler.cpp', 'contentHandler.hpp',
 	'contentTypeField.cpp', 'contentTypeField.hpp',
 	'dateTime.cpp', 'dateTime.hpp',
 	'defaultAttachment.cpp', 'defaultAttachment.hpp',
-	'disposition.cpp', 'disposition.hpp',
 	'encoder.cpp', 'encoder.hpp',
 	'encoder7bit.cpp', 'encoder7bit.hpp',
 	'encoder8bit.cpp', 'encoder8bit.hpp',
