@@ -2,6 +2,11 @@
 VERSION 0.6.1-cvs
 =================
 
+2004-12-24  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Renamed class 'disposition' to 'contentDisposition' and the enum
+   namespace 'dispositionTypes' to 'contentDispositionTypes'.
+
 2004-12-23  Vincent Richard  <vincent@vincent-richard.net>
 
  * maildir: when connecting to the store, create root directory on the
